--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-header{
-  background-color: #314f9c;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
